--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "yemilgr/saasy",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
+    "description": "Sassy kit",
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
